<?xml version="1.0"?>
<package format="2">
  <name>homework_1</name>
  <version>0.1.0</version>
  <description>The homework_1 package</description>

  <maintainer email="eldison.dimo@studenti.univr.it">Eldison Dimo</maintainer>

  <license>LGPLv3</license>


  <author email="eldison.dimo@studenti.univr.it">Eldison Dimo</author>

  <build_depend>message_generation</build_depend>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
